<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_sweet"
    tools:context="com.example.sweetPlatinum.battleActivity.MultiPlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="moving_cloud.json"
            app:lottie_loop="true" />

        <View
            android:id="@+id/view_score"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@id/guideline5"
            app:layout_constraintEnd_toEndOf="@id/player_one"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <View
            android:id="@+id/view_score2"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/guideline5"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@id/player_two"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/button_share"
            android:src="@drawable/ic_share"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/player_1"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@id/guideline3" />

        <TextView
            android:id="@+id/player_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="@id/guideline4" />

        <TextView
            android:id="@+id/battle_score_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/view_score"
            app:layout_constraintEnd_toEndOf="@id/view_score"
            app:layout_constraintStart_toStartOf="@id/view_score"
            app:layout_constraintTop_toTopOf="@id/view_score" />

        <TextView
            android:id="@+id/battle_score_opponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/view_score2"
            app:layout_constraintEnd_toEndOf="@id/view_score2"
            app:layout_constraintStart_toStartOf="@id/view_score2"
            app:layout_constraintTop_toTopOf="@id/view_score2" />

        <ImageView
            android:id="@+id/rock1"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/rock"
            android:src="@drawable/ic_batu"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/guideline5" />

        <ImageView
            android:id="@+id/paper1"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/paper"
            android:src="@drawable/ic_kertas"
            app:layout_constraintEnd_toEndOf="@id/rock1"
            app:layout_constraintStart_toStartOf="@id/rock1"
            app:layout_constraintTop_toBottomOf="@id/rock1" />

        <ImageView
            android:id="@+id/scissor1"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/scissor"
            android:src="@drawable/ic_gunting"
            app:layout_constraintBottom_toBottomOf="@id/guideline6"
            app:layout_constraintEnd_toEndOf="@id/paper1"
            app:layout_constraintStart_toStartOf="@id/paper1"
            app:layout_constraintTop_toBottomOf="@id/paper1" />

        <ImageView
            android:id="@+id/rock2"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/rock"
            android:src="@drawable/ic_batu"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintTop_toTopOf="@id/guideline5" />

        <ImageView
            android:id="@+id/paper2"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/paper"
            android:src="@drawable/ic_kertas"
            app:layout_constraintEnd_toEndOf="@id/rock2"
            app:layout_constraintStart_toStartOf="@id/rock2"
            app:layout_constraintTop_toBottomOf="@id/rock2" />

        <ImageView
            android:id="@+id/scissor2"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/scissor"
            android:src="@drawable/ic_gunting"
            app:layout_constraintBottom_toTopOf="@id/guideline6"
            app:layout_constraintEnd_toEndOf="@id/paper2"
            app:layout_constraintStart_toStartOf="@id/paper2"
            app:layout_constraintTop_toBottomOf="@id/paper2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            android:textColor="@android:color/holo_red_light"
            android:textSize="64sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guideline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <ImageView
            android:id="@+id/iv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/button_save"
            android:src="@drawable/ic_save"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/guideline6" />


        <ImageView
            android:id="@+id/iv_restart"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/button_restart"
            android:src="@drawable/refresh"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/guideline6" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>